# orangec-at

./: .gitignore  .gitmodules  .pnp.cjs  .yarnrc.yml  CLAUDE.md  CORS_FIX.md  DEPLOYMENT.md  GEMINI.md  PORTS_CONFIG.md  RAG_FINAL_SUMMARY.md  RAG_SETUP.md  README.md  deploy-oracle.sh  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  product-life-dev.code-workspace  temp_transcript.ko.vtt
.agent/: ANTIGRAVITY_SAFETY_RULES.md  STYLE-GUIDE.md
.agent/skills/: REFERENCE-WRITING-GUIDE.md  skill-rules.json
.agent/workflows/: blog-writer.md  content-marketing-team.md  linkedin-writer.md  marketing-planner.md  marketing-reviewer.md  marketing-writer.md  newsletter-writer.md  planner.md  reviewer.md  shorts-scriptwriter.md  thread-writer.md  youtube-scriptwriter.md
.claude/: README.md  SETUP.md
.claude/commands/: analyze-jd.md  breakdown.md  compact.md  cover-letter.md  end.md  resume.md  start.md  write-blog.md
.claude/hooks/: post-tool-use-tracker.sh
.claude/skills/: core-strategist.md  skill-rules.json
.serena/: project.yml
.serena/memories/: circle_jd_analysis.md  (+14 more)
docs/: DEPLOYMENT.md  OPERATIONS-GUIDE.md  system.md
nginx/: nginx.conf
scripts/: bullet-status.js  daily-reminder.sh  generate.js  scrape-yoga-studios.js  setup-daily-reminder.sh
services/blog-api/: .env.example  Cargo.toml  README.md
services/blog-api/src/: auth.rs  main.rs  schema.rs
services/blog-api/src/models/: entities.rs
services/blog-api/src/routes/: admin.rs  admin_dm.rs  auth.rs  chat.rs  checkout.rs  marginalia.rs  mod.rs  newsletter.rs  onboarding.rs  search.rs  shop.rs  webhook.rs
services/blog-api/src/services/: db.rs  email.rs  mod.rs  resend.rs  stripe.rs
services/rag-service/: .env.example  .env.local.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json
services/rag-service/app/: main.py
services/rag-service/app/api/: chat.py  indexing.py  search.py
services/rag-service/app/models/: schemas.py
services/rag-service/app/services/: gemini.py  vector_store.py
services/rag-service/scripts/: generate_embeddings.py
(+562 files in other folders)
