[package]
name = "blog-api"
version = "0.1.0"
edition = "2021"
authors = ["Jaeil Lee <radio941016@gmail.com>"]
description = "Rust API server for OrangeC Blog"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid", "numeric"] }
diesel_migrations = "2.1"
r2d2 = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"

# HTTP client (for external APIs)
reqwest = { version = "0.11", features = ["json"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
cuid2 = "0.1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
bigdecimal = { version = "0.4", features = ["serde"] }
futures = "0.3"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Stripe
async-stripe = { version = "0.31", default-features = false, features = ["runtime-tokio-hyper"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
